tests/render_snapshots/snapshots/render_snapshots__connection_management__confirm_dialog_delete_inactive_connection.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │╭ Delete Connection ───────────────────╮                   │
│                  ││ Delete "Staging"?                    │                   │
│                  ││                                      │───────────────────┘
│                  ││ This action cannot be undone.        │───────────────────┐
│                  ││                                      │                   │
│                  │╰ Enter: Confirm │ Esc: Cancel ────────╯                   │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
