tests/render_snapshots/snapshots/render_snapshots__connection_management__connection_selector_with_service_entries.snap
---
source: tests/render_snapshots/connection_management.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│               ╭ Select Connection ───────────────────────────╮               │
│               │> ● Production                                │               │
│               │    Staging                                   │               │
│               │    Local Dev                                 │               │
│               │    dev-db         from pg_service.conf       │               │
│               │    prod-replica   from pg_service.conf       │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ Enter Confirm  ↑/↓ Select  n New  e Edit  d D╯               │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Confirm  ↑/↓:Select  n:New  e:Edit  d:Delete  Esc:Close
